@@ -1,3 +1,8 @@
+2010-03-17  Michal Nazarewicz  <mina86/AT/mina86.com>
+
+	* cdiff: + better handling of recursive diff
+	+ code refactored
+
 2010-03-14  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	* mpd-show: + added iconv support
